Complete Design Uploaded

--- a/index.html
+++ b/index.html
@@ -4,8 +4,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Website Using HTML5 and CSS3</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Header Section Start -->
+    <header>
+        <nav>
+            <div class="nav-container">
+                <div class="logo-container">
+                    <img src="./logo/logo-light.png" alt="Logo" class="logo">
+                </div>
+                    <div class="menu-item">
+                        <li class="item">Home</li>
+                        <li class="item">About</li>
+                        <li class="item">Services</li>
+                        <li class="item">Contact</li>
+                    </div>
+            </div>
+        </nav>
+    </header>
+    <!-- Main Section Start  -->
+    <main>
+
+        <!-- Banner Section Start -->
+        <section id="BannerSection">
+            <div class="banner-container">
+                <div class="banner-text">
+                    <h1 class="title">Better design for <br>your digital products</h1>
+                    <p class="description">We are a creative studio specializing in UI/UX design, development and strategy.</p>
+                    <button class="btn">Explore More</button>
+                </div>
+                <div class="banner-img-container">
+                    <img src="./images/banner.png" alt="bannerimg" class="banner-img">
+                </div>
+            </div>
+        </section>
+
+        <!-- About Section Start -->
+        <section id="AboutSection">
+            <div class="about-container">
+                <h1 class="title about-title">About US</h1>
+                <div class="about-content">
+                    <div>
+                        <img src="./images/section.png" alt="AboutImg" class="about-img">
+                    </div>
+                    <div class="about-text">
+                        <h2 class="mini-title">We grow brands through <br>bold & strategic creative</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                             <br>Inventore porro vel ipsam! Laudantium saepe </p>
+                        <button class="btn">Contact With US</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Services Section Start -->
+        <section id="ServicesSection">
+            <div class="services-container">
+                <h1 class="about-title services-title">Our Service's</h1>
+                <div class="box-container">
+                    <div class="box">
+                        <img src="./icon/0.png" alt="" class="box-img">
+                        <h3 class="box-title">Web Development</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quae, vitae rem cumque unde corrupti doloremque eum officiis voluptatum? Enim.</p>
+                        <button class="btn box-btn">details</button>
+                    </div>
+                    <div class="box">
+                        <img src="./icon/0.png" alt="" class="box-img">
+                        <h3 class="box-title">Web Development</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quae, vitae rem cumque unde corrupti doloremque eum officiis voluptatum? Enim.</p>
+                        <button class="btn box-btn">details</button>
+                    </div>
+                    <div class="box">
+                        <img src="./icon/0.png" alt="" class="box-img">
+                        <h3 class="box-title">Web Development</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quae, vitae rem cumque unde corrupti doloremque eum officiis voluptatum? Enim.</p>
+                        <button class="btn box-btn">details</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- Footer Section Start -->
+    <footer>
+        <div class="footer-section">
+            <div class="footer-container">
+            <div class="brand-logo">
+                <img src="./logo/logo-light.png" alt="footerLogo" class="footer-logo">
+                <p class="footer-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident id possimus iure est nihil quisquam quasi neque hic in doloribus.</p>
+            </div>
+            <div class="links">
+                <h3 class="footer-title">Useful Links</h3>
+                <li>About Us</li>
+                <li>Carres</li>
+                <li> News & Article</li>
+                <li>Legal Notice</li>
+            </div>
+            <div class="support">
+                <h3 class="footer-title">Support</h3>
+                <li>Help Center</li>
+                <li>Contact Us</li>
+                <li>FAQ</li>
+                <li>Parent Community</li>
+            </div>
+            <div class="contact">
+                <h3 class="footer-title">Contact Information</h3>
+                <p>Feel free to contact & reach us !!
+                    <br>3557 Derek Drive, Orlando, Florida
+                   <br> +1(456)657-887
+                   <br> info@domain.com
+                </p>
+            </div>
+        </div>
+    </div>
+        <!-- Copyright Section Start -->
+        <div class="copyright-section">
+            <small class="copyright-text">Copyright © 2022 Agence. All rights reserved.</small>
+        </div>
+    </footer>
 </body>
 </html>
