--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                     <img src="./logo/logo-light.png" alt="Logo" class="logo">
                 </div>
                     <div class="menu-item">
-                        <li class="item">Home</li>
-                        <li class="item">About</li>
-                        <li class="item">Services</li>
-                        <li class="item">Contact</li>
+                        <li class="item"><a href="#">Home</a></li>
+                        <li class="item"><a href="#AboutSection">About</a></li>
+                        <li class="item"><a href="#ServicesSection">Services</a></li>
+                        <li class="item"><a href="#footerSection">Contact Us</a></li>
                     </div>
             </div>
         </nav>
@@ -86,7 +86,7 @@
         </section>
     </main>
     <!-- Footer Section Start -->
-    <footer>
+    <footer id="footerSection">
         <div class="footer-section">
             <div class="footer-container">
             <div class="brand-logo">
